fixed cropped category

--- a/src/renders/homepage/sass/_desktop.scss
+++ b/src/renders/homepage/sass/_desktop.scss
@@ -57,7 +57,7 @@
     & > li {
       display: inline-block;
       vertical-align: top;
-      margin-right: 29px;
+      margin-right: 23px;
 
       &:last-child {
         margin-right: 0;
